--- a/Test/Podfile
+++ b/Test/Podfile
@@ -7,3 +7,5 @@ pod 'YJCocoa', :git => 'https://github.com/937447974/YJCocoa.git', :branch => 'd
 
 #pod 'YJCocoa/CoreServicesLayer/Foundation/Log'
 
+#pod 'YJCocoa/CocoaTouchLayer/UIKit/CollectionView'
+
