--- a/Developer/CocoaTouchLayer/UIKit/YJTableView/Podfile
+++ b/Developer/CocoaTouchLayer/UIKit/YJTableView/Podfile
@@ -3,6 +3,7 @@ platform :ios, '6.0'
 # Uncomment this line if you're using Swift
 # use_frameworks!
 
+pod 'YJCocoa/CocoaTouchLayer/UIKit/ViewGeometry'
 pod 'YJCocoa/CoreServicesLayer/Foundation/Other'
 pod 'YJCocoa/CoreOSLayer/System'
 
