自动布局悬浮cell bug修复

--- a/Developer/CocoaTouchLayer/UIKit/YJTableView/Podfile
+++ b/Developer/CocoaTouchLayer/UIKit/YJTableView/Podfile
@@ -8,4 +8,6 @@ pod 'YJCocoa/CocoaTouchLayer/UIKit/AutoLayout'
 pod 'YJCocoa/CoreServicesLayer/Foundation/Other'
 pod 'YJCocoa/CoreOSLayer/System'
 
+#pod 'YJCocoa', :git => 'https://github.com/937447974/YJCocoa.git'
+
 
