--- a/Developer/AppFrameworks/UIKit/YJUIPageViewManager/Podfile
+++ b/Developer/AppFrameworks/UIKit/YJUIPageViewManager/Podfile
@@ -1,9 +1,9 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '7.0'
+platform :ios, '8.0'
 # Uncomment this line if you're using Swift
 # use_frameworks!
 
 target 'YJUIPageViewManager' do
-    pod 'YJCocoa/AppFrameworks/Foundation/Timer'
-    pod 'YJCocoa/AppFrameworks/Foundation/Other'
+    pod 'YJCocoa/AppFrameworks/UIKit/PageViewManager', :path => "../../../../YJCocoa.podspec"
+
 end
