--- a/Developer/AppFrameworks/UIKit/YJNavigationBar/Podfile
+++ b/Developer/AppFrameworks/UIKit/YJNavigationBar/Podfile
@@ -4,7 +4,9 @@ platform :ios, '8.0'
 # use_frameworks!
 
 def shared_pods
-    pod 'YJCocoa/AppFrameworks/UIKit/NavigationBar', :path => "../../../../YJCocoa.podspec"
+    pod 'YJCocoa/AppFrameworks/UIKit/NavigationBar', :path => "../../../../"
+    pod 'YJCocoa/System/Other', :path => "../../../../"
+    
 end
 
 target 'YJNavigationBar' do
