--- a/Developer/YJCocoa/Podfile
+++ b/Developer/YJCocoa/Podfile
@@ -17,7 +17,7 @@ target 'YJCocoa' do
     
     # Pods for YJCocoa
     yj_pod 'YJCocoa', :path => "../../YJCocoa.podspec"
-    #yj_pod 'YJCocoa/DeveloperTools', :path => "../../YJCocoa.podspec"
+    yj_pod 'YJCocoa/DeveloperTools', :path => "../../YJCocoa.podspec"
     
 end
 
