--- a/Developer/AppFrameworks/Foundation/YJCodeInject/Podfile
+++ b/Developer/AppFrameworks/Foundation/YJCodeInject/Podfile
@@ -1,5 +1,5 @@
 platform :ios, '9.0'
-use_frameworks!
+#use_frameworks!
 
 target 'YJCodeInject' do
     pod 'YJCocoa/AppFrameworks/Foundation/CodeInject', :path => "../../../../YJCocoa.podspec"
