--- a/Developer/AppFrameworks/Foundation/YJCodeInject/Podfile
+++ b/Developer/AppFrameworks/Foundation/YJCodeInject/Podfile
@@ -1,6 +1,8 @@
 platform :ios, '9.0'
-#use_frameworks!
+use_frameworks!
 
 target 'YJCodeInject' do
   pod 'YJCocoa/AppFrameworks/Foundation/CodeInject', :path => "../../../../YJCocoa.podspec"
+  pod 'FrameworkA', :path => "./FrameworkA/"
+  pod 'FrameworkB', :path => "./FrameworkB/"
 end
