--- a/Demo/Swift/AppFrameworks/Foundation/YJFoundation/YJFoundation.xcodeproj/xcshareddata/xcschemes/YJFoundation.xcscheme
+++ b/Demo/Swift/AppFrameworks/Foundation/YJFoundation/YJFoundation.xcodeproj/xcshareddata/xcschemes/YJFoundation.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4AFF22DE229C2C85005E6248"
+               BuildableName = "YJFoundationTests.xctest"
+               BlueprintName = "YJFoundationTests"
+               ReferencedContainer = "container:YJFoundation.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
