--- a/Demo/Swift/YJSystem/YJSystem/YJSystem.entitlements
+++ b/Demo/Swift/YJSystem/YJSystem/YJSystem.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.yjcocoa</string>
+		<string>com.yjcocoa</string>
 	</array>
 </dict>
 </plist>
