--- a/Demo/Swift/YJCocoa/Podfile
+++ b/Demo/Swift/YJCocoa/Podfile
@@ -1,5 +1,6 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, '9.0'
+install! 'cocoapods', :disable_input_output_paths => true
 
 target 'YJCocoa' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
