--- a/Demo/Swift/AppFrameworks/Foundation/YJFoundation/Podfile
+++ b/Demo/Swift/AppFrameworks/Foundation/YJFoundation/Podfile
@@ -4,6 +4,7 @@ install! 'cocoapods', :disable_input_output_paths => true
 
 target 'YJFoundation' do
     pod 'YJCocoa', :path => "../../../../../YJCocoa.podspec"
+    pod 'HandyJSON', '~> 5.0.0'
     target 'YJFoundationTests' do
         inherit! :search_paths
         # Pods for testing
