--- a/Demo/Swift/AppFrameworks/Foundation/YJFoundation/YJFoundation.xcodeproj/xcshareddata/xcschemes/YJFoundationTests.xcscheme
+++ b/Demo/Swift/AppFrameworks/Foundation/YJFoundation/YJFoundation.xcodeproj/xcshareddata/xcschemes/YJFoundationTests.xcscheme
@@ -23,6 +23,15 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "4AF9303F228072D600AFE6A4"
+            BuildableName = "YJFoundation.app"
+            BlueprintName = "YJFoundation"
+            ReferencedContainer = "container:YJFoundation.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -36,6 +45,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "4AF9303F228072D600AFE6A4"
+            BuildableName = "YJFoundation.app"
+            BlueprintName = "YJFoundation"
+            ReferencedContainer = "container:YJFoundation.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -45,6 +64,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "4AF9303F228072D600AFE6A4"
+            BuildableName = "YJFoundation.app"
+            BlueprintName = "YJFoundation"
+            ReferencedContainer = "container:YJFoundation.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
