--- a/Developer/AppFrameworks/UIKit/YJViewControllerTransitioning/Podfile
+++ b/Developer/AppFrameworks/UIKit/YJViewControllerTransitioning/Podfile
@@ -2,5 +2,5 @@
 platform :ios, '8.0'
 
 target 'YJViewControllerTransitioning' do
-  pod 'YJCocoa/AppFrameworks/UIKit/ViewControllerTransitioning', :path => "../../../../"
+  pod 'YJCocoa/AppFrameworks/UIKit/ViewControllerTransitioning' , :path => "../../../../YJCocoaOC.podspec"
 end
