--- a/Demo/Swift/AppFrameworks/UIKit/YJExtension/Podfile
+++ b/Demo/Swift/AppFrameworks/UIKit/YJExtension/Podfile
@@ -2,6 +2,6 @@ platform :ios, '9.0'
 use_frameworks!
 install! 'cocoapods', :disable_input_output_paths => true
 
-target 'YJViewGeometry' do
+target 'YJExtension' do
     pod 'YJCocoa', :path => "../../../../../YJCocoa.podspec"
 end
