--- a/Demo/Swift/YJCocoa/Podfile
+++ b/Demo/Swift/YJCocoa/Podfile
@@ -1,11 +1,7 @@
-# Uncomment the next line to define a global platform for your project
 platform :ios, '9.0'
+use_frameworks!
 install! 'cocoapods', :disable_input_output_paths => true
 
 target 'YJCocoa' do
-  # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
-  use_frameworks!
-
-  # Pods for YJCocoa
-
+    pod 'YJCocoa/AppFrameworks/UIKit', :path => "../../../YJCocoa.podspec"
 end
