--- a/Demo/OC/DeveloperTools/YJTimeProfiler/Podfile
+++ b/Demo/OC/DeveloperTools/YJTimeProfiler/Podfile
@@ -1,11 +1,8 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '8.0'
+platform :ios, '9.0'
+use_frameworks!
 
-target 'YJTimeProfiler' do
-    # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-    # use_frameworks!
-    
-    # Pods for YJTimeProfiler
-    pod 'YJCocoa/DeveloperTools/TimeProfiler', :path => "../../../YJCocoaOC.podspec"
-    
+target 'YJTimeProfiler' do  
+  pod 'YJCocoa/OC', :path => "../../../../"
+
 end
