--- a/Demo/Swift/YJCocoa/Podfile
+++ b/Demo/Swift/YJCocoa/Podfile
@@ -2,6 +2,6 @@ platform :ios, '9.0'
 use_frameworks!
 install! 'cocoapods', :disable_input_output_paths => true
 
-target 'YJCocoa' do
+target 'YJCocoa_Example' do
     pod 'YJCocoa', :path => "../../../YJCocoa.podspec"
 end
